Closed Bug 163403 Opened 23 years ago Closed 23 years ago

Browser tabs should show correct drop feedback, and not be draggable onto themselves

Categories

(Camino Graveyard :: Drag & Drop, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: sfraser_bugs, Assigned: sfraser_bugs)

Details

The browser tab control has a number of drag and drop issues: 1. You can't drag from a tab 2. There is no drop feedback for items dragged onto a tab 3. There is no drop feedback for items dragged onto the space beside the tabs (dropping here makes a new tab) 4. There is nothing to stop 'redundant' drops (from the tab to its content area, from the proxy icon to the selected tab, from the proxy icon to the content area). I plan to fix these.
Status: NEW → ASSIGNED
Fixed. I did the following: 1. You can now drag from tabs, by clicking and dragging on the icon in a tab. 2. When dragging over tabs, drop feedback is shown by an alpha-blended gray rectangle over the tab item. 3. When dragging over the tab background, drop feedback is shown with a tinged rectangle in the area behind the tabs. (When tabs are not showing, there is a strip just under the bookmarks toolbar which can act as a drop target for such drags too. This is probably a bug. There is also a strip along the bottom of the content area, over the status bar.) 4. Drags from a tab into its content area are refused. 5. Drags of the proxy icon onto the active tab are refused. 6. Drags of the proxy icon into the content area for the same window are refused.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
way cool. ;) the highlight of the tab bar confused me when i first saw it until i tried it. maybe drawing an alpha blended new tab might be more clear as to the result of the drag? just a thought.
Marking verified in the 2002-08-21-05 NB.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.