Improve drag and drop feedback (bug 163403). Tab items now contain a view that handles drag and drop for that item, and draws via a couple of NSCells, and show drag feedback when you drag over them.